kafka-se.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: kafka-plain-b1
  namespace: ptt-demo
spec:
  hosts:
  - kafka-plain-b1.mesh
  addresses:
  - 10.143.33.207
  location: MESH_EXTERNAL
  resolution: STATIC
  ports:
  - number: 9092
    name: tcp-kafka
    protocol: TCP
  endpoints:
  - address: 10.143.33.207
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: kafka-plain-b2
  namespace: ptt-demo
spec:
  hosts:
  - kafka-plain-b2.mesh
  addresses:
  - 10.143.33.208
  location: MESH_EXTERNAL
  resolution: STATIC
  ports:
  - number: 9092
    name: tcp-kafka
    protocol: TCP
  endpoints:
  - address: 10.143.33.208
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: kafka-plain-b3
  namespace: ptt-demo
spec:
  hosts:
  - kafka-plain-b3.mesh
  addresses:
  - 10.143.33.209
  location: MESH_EXTERNAL
  resolution: STATIC
  ports:
  - number: 9092
    name: tcp-kafka
    protocol: TCP
  endpoints:
  - address: 10.143.33.209
