kafka-telemetry.yaml
apiVersion: telemetry.istio.io/v1
kind: Telemetry
metadata:
  name: kafka-egress-metrics
  namespace: <twoj-ns>
spec:
  selector:
    matchLabels: {}  # albo np. app: twoja-apka
  metrics:
  - providers:
    - name: prometheus
    overrides:
    - match:
        metric: ALL_METRICS
      tagOverrides:
        destination_service:
          value: request.host
        destination_ip:
          value: connection.upstream.address
        destination_port:
          value: connection.upstream.port
    # Wymuś także TCP metrics (dla nie-HTTP to kluczowe)
    # W nowszym Istio TCP metryki są domyślnie włączone,
    # ale ten Telemetry zapewnia bogatsze tagi.




apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: sse-stream-timeout-disable
  namespace: ptt-demo
spec:
  workloadSelector:
    labels:
      app: ptt-demo-price-distribution
  configPatches:
    - applyTo: NETWORK_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          portNumber: 3000
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
      patch:
        operation: MERGE
        value:
          name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            stream_idle_timeout: 0s
            request_timeout: 0s
            drain_timeout: 0s
